--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/socialite": "^5.2",
+        "laravel/tinker": "^2.5",
+        "socialiteproviders/gitlab": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
