added login feature flags

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+AUTH_LOCAL=false
+AUTH_GITLAB=true
+GITLAB_CLIENT_ID=
+GITLAB_CLIENT_SECRET=
+GITLAB_BASE_URL=
+
+AUTH_LOCAL=true
+AUTH_GITLAB=true
