Add config flag to enable/disable local registration
Works by completely disabling access to the local registration
page when disabled.

--- a/.env.example
+++ b/.env.example
@@ -52,8 +52,11 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
 AUTH_LOCAL=false
+AUTH_LOCAL_REGISTRATIONS=true
 AUTH_GITLAB=true
 
 GITLAB_CLIENT_ID=
 GITLAB_CLIENT_SECRET=
 GITLAB_BASE_URL=
+
+
