json formatting wasn't working correctly in prod so it had to be switched out for standard comma separated values

--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 AUTH_LOCAL=false
 AUTH_LOCAL_REGISTRATIONS=true
-AUTH_LOCAL_EMAIL_DOMAIN=['example.com', 'example.org']
+AUTH_LOCAL_EMAIL_DOMAIN=example.com,example.org
 AUTH_GITLAB=true
 
 GITLAB_CLIENT_ID=
